--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "babel-plugin-import": "^1.13.0",
     "core-js": "^3.6.4",
     "vant": "^2.8.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
